Fixed layout broken in firefox for search page

--- a/app/assets/stylesheets/channels.css.scss
+++ b/app/assets/stylesheets/channels.css.scss
@@ -73,6 +73,10 @@ body {
   }
 }
 
+.search-query {
+  width: 100% !important;
+}
+
 tr:target {
   background-color: #fff3c2;
 }
